cmake_minimum_required(VERSION 3.3)
project(leetcode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories($ENV{Boost_DIR})

add_executable(spiral_matrix spiral_matrix.cpp)
add_executable(spiral_matrix_ii spiral_matrix_ii.cpp)
add_executable(simplify_path simplify_path.cpp)
add_executable(3sum_closest 3sum_closest.cpp)
add_executable(two_sum two_sum.cpp)
add_executable(h-index h-index.cpp)
add_executable(longest_sub_without_char longest_sub_without_char.cpp)
add_executable(sqrt sqrt.cpp)
add_executable(product_array_except_self "Product of Array Except Self.cpp")
add_executable(wildcard_matching wildcard_matching.cpp)
add_executable(ranged_bitwise_and ranged_bitwise_and.cpp)
add_executable(longestCommonPrefix longestCommonPrefix.cpp)
add_executable(combinations combinations.cpp)
add_executable(problem_one problem_one.cpp)
add_executable(problem_two problem_two.cpp)
add_executable(problem_three problem_three.cpp)
add_executable(problem_four problem_four.cpp)
add_executable(longest_substr_without_repeating_char "Longest Substring Without Repeating Characters.cpp")
add_executable(suffle_an_array "Shuffle an Array.cpp")
add_executable(matchsticks_to_square "Matchsticks to Square.cpp")
add_executable(maximum_subarray "Maximum Subarray.cpp")
add_executable(best_time_to_buy_and_sell_stock "Best Time to Buy and Sell Stock.cpp")
add_executable(best_time_to_buy_and_sell_stock_ii "Best Time to Buy and Sell Stock II.cpp")
add_executable(climbing_stairs "Climbing Stairs.cpp")
add_executable(house_robber "House Robber.cpp")
add_executable(house_robber_ii "House Robber II.cpp")
